Fix overflow direction

--- a/css/base.css
+++ b/css/base.css
@@ -11,7 +11,9 @@ body {
     padding-top: 5px;
     overflow-y: auto;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0%;
 }
 
 .username img {
